# cargo-ignite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md
src/: ansi_color.rs  cache.rs  compiler.rs  crates.rs  lib.rs  main.rs  manifest.rs  progress.rs  spinner.rs
src/commands/: add.rs  fetch.rs  help.rs  install.rs  mod.rs  remove.rs
tests/: integration.rs
